[gd_scene load_steps=9 format=3 uid="uid://cb2547m4s54t2"]

[ext_resource type="Texture2D" uid="uid://thnj12t7c3yd" path="res://Assets/icon.svg" id="1_oclfm"]
[ext_resource type="Script" uid="uid://dhd6jwyvscbs1" path="res://Cards/card.gd" id="2_fynp6"]
[ext_resource type="PackedScene" uid="uid://dc5awr60mathl" path="res://Cards/card_front.tscn" id="3_fynp6"]

[sub_resource type="BoxMesh" id="BoxMesh_8uh7m"]
size = Vector3(3.75, 5, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6uqi0"]
albedo_texture = ExtResource("1_oclfm")

[sub_resource type="ViewportTexture" id="ViewportTexture_oclfm"]
viewport_path = NodePath("CardFrontViewport")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wqwah"]
size = Vector2(75, 100)

[sub_resource type="ViewportTexture" id="ViewportTexture_37kl0"]
viewport_path = NodePath("CardModelViewport")

[node name="Card" type="Node2D"]

[node name="CardModelViewport" type="SubViewport" parent="."]

[node name="CardModel" type="MeshInstance3D" parent="CardModelViewport"]
mesh = SubResource("BoxMesh_8uh7m")
surface_material_override/0 = SubResource("StandardMaterial3D_6uqi0")
script = ExtResource("2_fynp6")

[node name="CardFront" type="Sprite3D" parent="CardModelViewport/CardModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.006)
pixel_size = 0.005
texture = SubResource("ViewportTexture_oclfm")

[node name="CardBack" type="Sprite3D" parent="CardModelViewport/CardModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.006)
texture = SubResource("PlaceholderTexture2D_wqwah")

[node name="Camera3D" type="Camera3D" parent="CardModelViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CardModelViewport"]
transform = Transform3D(-0.78338, -0.621398, -0.0134175, 0.621192, -0.78348, 0.0167198, -0.0209019, 0.00476298, 0.99977, 0, 0, 0)
shadow_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(324, 311)
texture = SubResource("ViewportTexture_37kl0")

[node name="CardFrontViewport" type="SubViewport" parent="."]
size = Vector2i(750, 1000)

[node name="CardFront" parent="CardFrontViewport" instance=ExtResource("3_fynp6")]
